fix overlapping title on mobile

--- a/cms/compass/sass/partials/_small-screens-only.scss
+++ b/cms/compass/sass/partials/_small-screens-only.scss
@@ -156,9 +156,7 @@
   .row .logo-image {
     display: none;
   }
-}
 
-@media screen and (max-width: 685px) and (max-height: 600px) {
   h2.preview-label {
     display: none;
   }
