--- a/cms/css/style.css
+++ b/cms/css/style.css
@@ -1104,8 +1104,7 @@ h2.preview-label {
   .row .logo-image {
     display: none;
   }
-}
-@media screen and (max-width: 685px) and (max-height: 600px) {
+
   h2.preview-label {
     display: none;
   }
